<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, welcome to the SurveillanceWatch Shell!</string>
    <string name="app_name">SurveillanceWatch</string>
    <string name="settings">Settings</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termsofuse">Terms of Use</string>
    <string name="reload">Reload</string>
    <string name="help">Help</string>
    <string name="backtoapp">Back to App</string>
    <string name="WelcomeHeader">Welcome to SurveillanceWatch</string>
    <string name="showOverviewMap">View Map</string>
    <string name="ViewAsList">View List</string>
    <string name="WelcomeDetail">
<![CDATA[
The SurveillanceWatch app is part of a research project from the University of Toronto.\n\n

Our aim is to help Canadians learn more about video surveillance and their rights in relation to it.\n\n

You can use the SurveillanceWatch app to:\n\n
 
* Spot the surveillance cameras in your vicinity (on a map or in a list)\n
* Report on surveillance cameras and the signs that describe them\n
* Learn about surveillance installations (collections of cameras with a common owner) that are not compliant with Canadian privacy regulations\n
]]>
	</string>
	<string name="loadingMap">Loading map...</string>
    <string name="addReport">Add Report</string>

</resources>