<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/privacypolicy"
          android:title="@string/privacypolicy"
          android:onClick="loadPrivacyPolicy" />
    <item android:id="@+id/termsofuse"
          android:title="@string/termsofuse"
          android:onClick="loadTermsOfUse" />
    <!-- <item android:id="@+id/settings"
          android:title="@string/settings"/>
   	<item android:id="@+id/reload"
          android:title="@string/reload"
          android:onClick="reload" /> -->
    <item android:id="@+id/help"
          android:title="@string/help"
          android:onClick="loadHelp" />
   	<item android:id="@+id/backtoapp"
          android:title="@string/backtoapp"
          android:onClick="loadWelcome" />
</menu>