<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dip"
        android:text="@string/WelcomeHeader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.04"
        android:text="@string/WelcomeDetail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:paddingBottom="10dip">

        <Button
            android:id="@+id/ShowOverviewMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onShowMapClick"
            android:text="@string/showOverviewMap"
            android:layout_weight="1" />
        
        <Button
            android:id="@+id/ViewAsList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ViewAsList"
            android:onClick="onViewListClick"
            android:layout_weight="1" />

        <Button
            android:id="@+id/AddReport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addReport"
            android:onClick="onAddReportClick"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
